Add contributing guide and update extension metadata
Introduces CONTRIBUTING.md with detailed guidelines for contributors. Updates README to include a project icon and reference the new contributing guide. Adds author field to manifest.json. Options page now displays the extension version dynamically. Updates release scripts to reference 'Whorl' instead of '@Mention'.

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "Whorl",
   "version": "1.0.0",
   "description": "@mention contacts in your emails with autocomplete",
+  "author": "Den Delimarsky",
   "browser_specific_settings": {
     "gecko": {
       "id": "at-mention@thunderbird-extension",
