--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Extract version from tag
         id: version
@@ -30,6 +32,30 @@ jobs:
             exit 1
           fi
           echo "Version verified: $TAG_VERSION"
+
+      - name: Get previous tag
+        id: prev_tag
+        run: |
+          PREV_TAG=$(git tag --sort=-version:refname | grep -E '^[0-9]+\.[0-9]+\.[0-9]+$' | sed -n '2p')
+          if [ -z "$PREV_TAG" ]; then
+            echo "PREV_TAG=" >> $GITHUB_OUTPUT
+            echo "No previous tag found"
+          else
+            echo "PREV_TAG=$PREV_TAG" >> $GITHUB_OUTPUT
+            echo "Previous tag: $PREV_TAG"
+          fi
+
+      - name: Get commits since last release
+        id: commits
+        run: |
+          if [ -z "${{ steps.prev_tag.outputs.PREV_TAG }}" ]; then
+            COMMITS=$(git log --pretty=format:"- %s (%h)" HEAD)
+          else
+            COMMITS=$(git log --pretty=format:"- %s (%h)" ${{ steps.prev_tag.outputs.PREV_TAG }}..HEAD)
+          fi
+          echo "COMMITS<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMITS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Build XPI package
         run: |
@@ -53,8 +79,10 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           gh release create "${{ steps.version.outputs.VERSION }}" \
-            --title "Whorl v${{ steps.version.outputs.VERSION }}" \
-            --notes "## Whorl v${{ steps.version.outputs.VERSION }}
+            --title "Whorl ${{ steps.version.outputs.VERSION }}" \
+            --notes "## Whorl ${{ steps.version.outputs.VERSION }}
+
+          See the full [CHANGELOG](https://github.com/${{ github.repository }}/blob/main/CHANGELOG.md) for details.
 
           ### Installation
           1. Download the \`.xpi\` file below
@@ -63,5 +91,8 @@ jobs:
           4. Select the downloaded \`.xpi\` file
 
           ### Requirements
-          - Thunderbird 128 or later" \
+          - Thunderbird 128 or later
+
+          ### Commits in this release
+          ${{ steps.commits.outputs.COMMITS }}" \
             "dist/${{ env.XPI_NAME }}"
