--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Whorl",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "@mention contacts in your emails with autocomplete",
   "author": "Den Delimarsky",
   "browser_specific_settings": {
@@ -19,6 +19,8 @@
     "open_in_tab": true
   },
   "icons": {
+    "16": "icon-16.png",
+    "32": "icon-32.png",
     "48": "icon-48.png",
     "96": "icon-96.png"
   }
