Add icon files to release workflow and update docs
Included icon-16.png and icon-32.png in the release packaging workflow. Updated CLAUDE.md with instructions for creating releases using git tags.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,8 @@ jobs:
             options.html \
             options.css \
             options.js \
+            icon-16.png \
+            icon-32.png \
             icon-48.png \
             icon-96.png
           echo "XPI_NAME=$XPI_NAME" >> $GITHUB_ENV
